--- a/.render.yaml
+++ b/.render.yaml
@@ -3,6 +3,6 @@ services:
     name: dmax-predictor
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python app.py"
+    startCommand: "gunicorn app:app"
     plan: free
     envVars: []
